--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/tabulated-operations.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/tabulated-operations.html
@@ -254,7 +254,7 @@
     <div id="operand2Container">
         <h3 id="operand2Title">Операнд 2</h3>
         <div id="operand2Content">
-            <button onclick="openModal('operand2')">Создать функцию</button>
+            <button onclick="openModal('operand2','tabulated-operations')">Создать функцию</button>
             <button onclick="openSave('operand2')" th:attr="disabled=${operand2Func == null}">Сохранить</button>
             <button onclick="openFunctionList('operand2')">Загрузить</button>
             <button onclick="openAnother('tabulated-operations','operand2')">Открыть</button>
