--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/createForm.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/createForm.html
@@ -41,6 +41,7 @@
       border-radius: 25px;
       float: left;
       font-family: Tahoma, sans-serif;
+      margin-top: 5px;
       font-size: 14px;
       background-color: #ccff66;
       color: #2e2e2e;
@@ -71,6 +72,7 @@
       <input type="number" placeholder="Количество точек" name="points" id="points" min="2" required>
       <button type="submit" id="generateTable">Сгенерировать таблицу</button>
     </form>
+    <button id="closeButtomCreateFunction" type="button" onclick="closeModal()">Закрыть</button>
   </div>
 </div>
 </body>
