--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/differential-operation.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/differential-operation.html
@@ -239,8 +239,8 @@
           </thead>
           <tbody>
           <tr th:each="i : ${#numbers.sequence(0, countOfDiff - 1)}">
-            <td><input type="number" th:value="${diffFunction.getXValues()[i]}" ></td>
-            <td><input type="number" th:value="${diffFunction.getYValues()[i]}" ></td>
+            <td><input type="number" th:value="${diffFunction.getXValues()[i]}" readonly></td>
+            <td><input type="number" th:value="${diffFunction.getYValues()[i]}" readonly></td>
           </tr>
           </tbody>
         </table>
@@ -269,8 +269,8 @@
       </thead>
       <tbody>
       <tr th:each="i : ${#numbers.sequence(0, countOfResultDiff - 1)}">
-        <td><input type="number" th:value="${resultDiffFunc.getXValues()[i]}" ></td>
-        <td><input type="number" th:value="${resultDiffFunc.getYValues()[i]}" ></td>
+        <td><input type="number" th:value="${resultDiffFunc.getXValues()[i]}" readonly></td>
+        <td><input type="number" th:value="${resultDiffFunc.getYValues()[i]}" readonly></td>
       </tr>
       </tbody>
     </table>
