--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/tableForm.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/tableForm.html
@@ -113,8 +113,8 @@
                 <th>Y</th>
             </tr>
             <tr th:each="i : ${#numbers.sequence(1, points)}">
-                <td><input type="number" name="x" step="0.01" /></td>
-                <td><input type="number" name="y" step="0.01"/></td>
+                <td><input type="number" name="x" step="0.01" required/></td>
+                <td><input type="number" name="y" step="0.01" required/></td>
             </tr>
         </table>
         <button type="submit">Создать</button>
