--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/tabulated-operations.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/tabulated-operations.html
@@ -340,8 +340,8 @@
                     </thead>
                     <tbody>
                     <tr th:each="i : ${#numbers.sequence(0, count1 - 1)}">
-                        <td><input type="number" th:value="${function1.getXValues()[i]}" ></td>
-                        <td><input type="number" th:value="${function1.getYValues()[i]}" ></td>
+                        <td><input type="number" th:value="${function1.getXValues()[i]}" readonly></td>
+                        <td><input type="number" th:value="${function1.getYValues()[i]}" readonly></td>
                     </tr>
                     </tbody>
                 </table>
@@ -371,8 +371,8 @@
                     </thead>
                     <tbody>
                     <tr th:each="i : ${#numbers.sequence(0, count2 - 1)}">
-                        <td><input type="number" th:value="${function2.getXValues()[i]}" ></td>
-                        <td><input type="number" th:value="${function2.getYValues()[i]}" ></td>
+                        <td><input type="number" th:value="${function2.getXValues()[i]}" readonly></td>
+                        <td><input type="number" th:value="${function2.getYValues()[i]}" readonly></td>
                     </tr>
                     </tbody>
                 </table>
@@ -413,8 +413,8 @@
                     </thead>
                     <tbody>
                     <tr th:each="i : ${#numbers.sequence(0, count3 - 1)}">
-                        <td><input type="number" th:value="${resultFunc.getXValues()[i]}" ></td>
-                        <td><input type="number" th:value="${resultFunc.getYValues()[i]}" ></td>
+                        <td><input type="number" th:value="${resultFunc.getXValues()[i]}" readonly></td>
+                        <td><input type="number" th:value="${resultFunc.getYValues()[i]}" readonly></td>
                     </tr>
                     </tbody>
                 </table>
