--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/graph.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/graph.html
@@ -4,7 +4,7 @@
     <script th:src="@{/js/scripts.js}" type="text/javascript"></script>
     <script th:src="@{/js/graphScript.js}" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <title>Diff</title>
+    <title>График</title>
 
     <style>
     .container {
