--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/differential-operation.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/differential-operation.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <script th:src="@{/js/scripts.js}" type="text/javascript"></script>
-  <title>Diff</title>
+  <title>Дифференцирование</title>
   <style>
     body {
       font-family: Tahoma, sans-serif;
