--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/tabulated-operations.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/tabulated-operations.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <script th:src="@{/js/scripts.js}" type="text/javascript"></script>
-    <title>Модальное окно</title>
+    <title>Операции</title>
     <style>
         body {
             font-family: Tahoma, sans-serif;
