--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/errorForm.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/errorForm.html
@@ -25,7 +25,17 @@
     #errorForm{
     }
 
+    #errorForm button{
+        text-align: center;
+        color: white;
+    }
+
     #errorMes{
+        text-align: center;
+        color: white;
+    }
+
+    #errorMessage{
         text-align: center;
         color: white;
     }
